package(default_visibility = [ "//visibility:public" ])

load("@io_bazel_rules_dotnet//dotnet/private:rules/stdlib.bzl", "net_stdlib")

net_stdlib(name="accessibility.dll")
net_stdlib(name="custommarshalers.dll")
net_stdlib(name="isymwrapper.dll")
net_stdlib(name="microsoft.activities.build.dll")
net_stdlib(name="microsoft.build.conversion.v4.0.dll")
net_stdlib(name="microsoft.build.dll")
net_stdlib(name="microsoft.build.engine.dll")
net_stdlib(name="microsoft.build.framework.dll")
net_stdlib(name="microsoft.build.tasks.v4.0.dll")
net_stdlib(name="microsoft.build.utilities.v4.0.dll")
net_stdlib(name="microsoft.csharp.dll")
net_stdlib(name="microsoft.jscript.dll")
net_stdlib(name="microsoft.visualbasic.compatibility.data.dll")
net_stdlib(name="microsoft.visualbasic.compatibility.dll")
net_stdlib(name="microsoft.visualbasic.dll")
net_stdlib(name="microsoft.visualc.dll")
net_stdlib(name="microsoft.visualc.stlclr.dll")
net_stdlib(name="mscorlib.dll")
net_stdlib(name="presentationbuildtasks.dll")
net_stdlib(name="presentationcore.dll")
net_stdlib(name="presentationframework.aero.dll")
net_stdlib(name="presentationframework.aero2.dll")
net_stdlib(name="presentationframework.aerolite.dll")
net_stdlib(name="presentationframework.classic.dll")
net_stdlib(name="presentationframework.dll")
net_stdlib(name="presentationframework.luna.dll")
net_stdlib(name="presentationframework.royale.dll")
net_stdlib(name="reachframework.dll")
net_stdlib(name="sysglobl.dll")
net_stdlib(name="system.activities.core.presentation.dll")
net_stdlib(name="system.activities.dll")
net_stdlib(name="system.activities.durableinstancing.dll")
net_stdlib(name="system.activities.presentation.dll")
net_stdlib(name="system.addin.contract.dll")
net_stdlib(name="system.addin.dll")
net_stdlib(name="system.componentmodel.composition.dll")
net_stdlib(name="system.componentmodel.composition.registration.dll")
net_stdlib(name="system.componentmodel.dataannotations.dll")
net_stdlib(name="system.configuration.dll")
net_stdlib(name="system.configuration.install.dll")
net_stdlib(name="system.core.dll")
net_stdlib(name="system.data.datasetextensions.dll")
net_stdlib(name="system.data.dll")
net_stdlib(name="system.data.entity.design.dll")
net_stdlib(name="system.data.entity.dll")
net_stdlib(name="system.data.linq.dll")
net_stdlib(name="system.data.oracleclient.dll")
net_stdlib(name="system.data.services.client.dll")
net_stdlib(name="system.data.services.design.dll")
net_stdlib(name="system.data.services.dll")
net_stdlib(name="system.data.sqlxml.dll")
net_stdlib(name="system.deployment.dll")
net_stdlib(name="system.design.dll")
net_stdlib(name="system.device.dll")
net_stdlib(name="system.diagnostics.tracing.dll")
net_stdlib(name="system.directoryservices.accountmanagement.dll")
net_stdlib(name="system.directoryservices.dll")
net_stdlib(name="system.directoryservices.protocols.dll")
net_stdlib(name="system.dll")
net_stdlib(name="system.drawing.design.dll")
net_stdlib(name="system.drawing.dll")
net_stdlib(name="system.dynamic.dll")
net_stdlib(name="system.enterpriseservices.dll")
net_stdlib(name="system.enterpriseservices.thunk.dll")
net_stdlib(name="system.enterpriseservices.wrapper.dll")
net_stdlib(name="system.identitymodel.dll")
net_stdlib(name="system.identitymodel.selectors.dll")
net_stdlib(name="system.identitymodel.services.dll")
net_stdlib(name="system.io.compression.dll")
net_stdlib(name="system.io.compression.filesystem.dll")
net_stdlib(name="system.io.log.dll")
net_stdlib(name="system.management.dll")
net_stdlib(name="system.management.instrumentation.dll")
net_stdlib(name="system.messaging.dll")
net_stdlib(name="system.net.dll")
net_stdlib(name="system.net.http.dll")
net_stdlib(name="system.net.http.webrequest.dll")
net_stdlib(name="system.numerics.dll")
net_stdlib(name="system.printing.dll")
net_stdlib(name="system.reflection.context.dll")
net_stdlib(name="system.runtime.dll")
net_stdlib(name="system.runtime.caching.dll")
net_stdlib(name="system.runtime.durableinstancing.dll")
net_stdlib(name="system.runtime.remoting.dll")
net_stdlib(name="system.runtime.serialization.dll")
net_stdlib(name="system.runtime.serialization.formatters.soap.dll")
net_stdlib(name="system.security.dll")
net_stdlib(name="system.servicemodel.activation.dll")
net_stdlib(name="system.servicemodel.activities.dll")
net_stdlib(name="system.servicemodel.channels.dll")
net_stdlib(name="system.servicemodel.discovery.dll")
net_stdlib(name="system.servicemodel.dll")
net_stdlib(name="system.servicemodel.routing.dll")
net_stdlib(name="system.servicemodel.web.dll")
net_stdlib(name="system.serviceprocess.dll")
net_stdlib(name="system.speech.dll")
net_stdlib(name="system.transactions.dll")
net_stdlib(name="system.web.abstractions.dll")
net_stdlib(name="system.web.applicationservices.dll")
net_stdlib(name="system.web.datavisualization.design.dll")
net_stdlib(name="system.web.datavisualization.dll")
net_stdlib(name="system.web.dll")
net_stdlib(name="system.web.dynamicdata.design.dll")
net_stdlib(name="system.web.dynamicdata.dll")
net_stdlib(name="system.web.entity.design.dll")
net_stdlib(name="system.web.entity.dll")
net_stdlib(name="system.web.extensions.design.dll")
net_stdlib(name="system.web.extensions.dll")
net_stdlib(name="system.web.mobile.dll")
net_stdlib(name="system.web.regularexpressions.dll")
net_stdlib(name="system.web.routing.dll")
net_stdlib(name="system.web.services.dll")
net_stdlib(name="system.windows.controls.ribbon.dll")
net_stdlib(name="system.windows.dll")
net_stdlib(name="system.windows.forms.datavisualization.design.dll")
net_stdlib(name="system.windows.forms.datavisualization.dll")
net_stdlib(name="system.windows.forms.dll")
net_stdlib(name="system.windows.input.manipulations.dll")
net_stdlib(name="system.windows.presentation.dll")
net_stdlib(name="system.workflow.activities.dll")
net_stdlib(name="system.workflow.componentmodel.dll")
net_stdlib(name="system.workflow.runtime.dll")
net_stdlib(name="system.workflowservices.dll")
net_stdlib(name="system.xaml.dll")
net_stdlib(name="system.xml.dll")
net_stdlib(name="system.xml.linq.dll")
net_stdlib(name="system.xml.serialization.dll")
net_stdlib(name="uiautomationclient.dll")
net_stdlib(name="uiautomationclientsideproviders.dll")
net_stdlib(name="uiautomationprovider.dll")
net_stdlib(name="uiautomationtypes.dll")
net_stdlib(name="windowsbase.dll")
net_stdlib(name="windowsformsintegration.dll")
net_stdlib(name="xamlbuildtask.dll")
net_stdlib(name="system.collections.specialized.dll")
net_stdlib(name="system.text.regularexpressions.dll")
net_stdlib(name="system.componentmodel.typeconverter.dll")
net_stdlib(name="system.runtime.extensions.dll")
net_stdlib(name="system.diagnostics.tracesource.dll")
net_stdlib(name="system.xml.readerwriter.dll")

