package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet/stdlib.core:macro.bzl", "all_core_stdlib")
load("@io_bazel_rules_dotnet//dotnet/private:rules/stdlib.bzl", "core_stdlib")

framework = "v2.1.200"

core_stdlib(
    name = "system.private.corelib.dll",
    dll = "system.private.corelib.dll",
    dotnet_context_data = "@io_bazel_rules_dotnet//:core_context_data_{}".format(framework),
)

all_core_stdlib(framework)
