package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet/stdlib.core:macro.bzl", "all_core_stdlib", "all_core_stdlib215")
load("@io_bazel_rules_dotnet//dotnet/private:rules/stdlib.bzl", "core_stdlib")

framework = "v2.1.502"

# system.memory.dll is not present in netcoreapp 2.1.200

all_core_stdlib(framework)

all_core_stdlib215(framework)
