package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet/stdlib.net:macro.bzl", "all_stdlib", "all_stdlib46", "all_stdlib471")
load("@io_bazel_rules_dotnet//dotnet/private:rules/stdlib.bzl", "net_stdlib")

framework = "net471"

all_stdlib(framework)

all_stdlib46(framework)

all_stdlib471(framework)
