load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "DOTNET_CORE_FRAMEWORKS", "core_binary", "core_xunit_test")

framework = "v2.1.503"

core_binary(
    name = "custom_bin.exe",
    srcs = [
        "main.cs",
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:mscorlib.dll",
    ],
)

core_xunit_test(
    name = "custom_bin_test.dll",
    size = "small",
    srcs = [
        "main_test.cs",
    ],
    data = [
        ":custom_bin.exe",
    ],
    dotnet_context_data = "@io_bazel_rules_dotnet//:core_context_data",
    native_deps = "@core_sdk//:native_deps",
    testlauncher = "@{}_xunit//:xunit.console.exe".format(framework),
    deps = [
        "@{}_xunit//:xunit.core.dll".format(framework),
        "@{}_xunit_assert//:assert.xunit.dll".format(framework),
    ],
)
