load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "DEFAULT_DOTNET_CORE_FRAMEWORK", "core_library", "core_xunit_test")

core_library(
    name = "custom_bin.dll",
    srcs = [
        "main.cs",
    ],
    out = "alt_bin.dll",
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:mscorlib.dll",
    ],
)

core_xunit_test(
    name = "custom_bin_test.dll",
    size = "small",
    srcs = [
        "main_test.cs",
    ],
    data = [
        ":custom_bin.dll",
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:system.runtime.dll",
        "@xunit.assert//:netcoreapp2.0_core",
        "@xunit.extensibility.core//:netcoreapp2.0_core",
        "@xunit.extensibility.execution//:netcoreapp2.0_core",
    ],
)
