load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_library", "core_xunit_test")

core_library(
    name = "custom_bin.dll",
    srcs = [
        "main.cs",
    ],
    out = "alt_bin.dll",
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:libraryset",
    ],
)

core_xunit_test(
    name = "custom_bin_test.dll",
    size = "small",
    srcs = [
        "main_test.cs",
    ],
    data = [
        ":custom_bin.dll",
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:libraryset",
        "@xunit.assert//:netcoreapp2.0_core",
        "@xunit.extensibility.core//:netcoreapp2.0_core",
        "@xunit.extensibility.execution//:netcoreapp2.0_core",
    ],
)
