load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "dotnet_binary", "dotnet_nunit_test")

dotnet_binary(
    name = "custom_bin",
    srcs = [
        "main.cs",
    ],
    out = "alt_bin.exe",
)

dotnet_nunit_test(
    name = "custom_bin_test",
    size = "small",
    srcs = [
        "main_test.cs",
    ],
    data = [":custom_bin"],
    deps = [
        "@nunit2//:nunit.framework",
    ],
)
