load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "dotnet_library", "dotnet_nunit_test")

dotnet_library(
    name = "custom_bin.dll",
    srcs = [
        "main.cs",
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib:system.dll",
    ],
)

dotnet_nunit_test(
    name = "custom_bin_test.dll",
    size = "small",
    srcs = [
        "main_test.cs",
    ],
    data = [
        ":custom_bin.dll",
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib:system.dll",
        "@nunitv2//:netstandard1.0_net",
    ],
)
