load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "dotnet_binary", "dotnet_nunit_test")
load("@io_bazel_rules_dotnet//tests:bazel_tests.bzl", "bazel_test")

bazel_test(
    name = "nuget_single",
    command = "test",
    dotnet_version = "host",
    targets = ["empty_test"],
    workspace_in = ":workspace.in.bzl",
    build_in = ":build.in.bzl",
    srcs = [":main_test.cs"],
)
