load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_xunit_test")

core_xunit_test(
    name = "nuget_single.dll",
    size = "large",
    srcs = [
        "nuget_single.cs",
    ],
    data = [
        "BUILD.in",
        "MyTest.cs.in",
        "WORKSPACE.in",
        "//tests:all_rules_md5",
    ],
    deps = [
        "//tests/testlib:testlib.dll",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:libraryset",
        "@xunit.assert//:netcoreapp2.0_core",
        "@xunit.extensibility.core//:netcoreapp2.0_core",
        "@xunit.extensibility.execution//:netcoreapp2.0_core",
    ],
)
