load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_xunit_test")

core_xunit_test(
    name = "roslyn.dll",
    size = "medium",
    srcs = [
        "roslyn.cs",
    ],
    data = [
        "BUILD.in",
        "MyTest.cs.in",
        "WORKSPACE.in",
        "//tests:all_rules_md5",
    ],
    deps = [
        "//tests/testlib:testlib.dll",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:system.runtime.interopservices.runtimeinformation.dll",
        "@xunit//:xunit.core.dll",
        "@xunit_assert//:assert.xunit.dll",
    ],
)
